@@ -14,7 +14,7 @@ class CampaignsController < ApplicationController
     end
 
     # If [Create Campaign] form is visible get the data to render it.
-    make_new_campaign if session["create_campaign"]
+    make_new_campaign if visible?(:create_campaign)
 
     respond_to do |format|
       format.html # index.html.haml
@@ -41,10 +41,8 @@ class CampaignsController < ApplicationController
   #----------------------------------------------------------------------------
   def new
     # Save [Create Campaign] visiblity for given context.
-    @context = (params[:context].blank? ? "create_campaign" : params[:context])
-    session[@context] = (params[:visible] == "true" ? nil : true)
-
-    make_new_campaign(@context)
+    preserve_visibility(:create_campaign)
+    make_new_campaign
 
     respond_to do |format|
       format.js   # new.js.rjs
@@ -65,11 +63,11 @@ class CampaignsController < ApplicationController
   def create
     @campaign = Campaign.new(params[:campaign])
     @users = User.all_except(@current_user)
-    @context = (params[:context].blank? ? "create_campaign" : params[:context])
+    preserve_visibility(:create_campaign)
 
     respond_to do |format|
       if @campaign.save_with_permissions(params[:users])
-        session[@context] = nil
+        drop_visibility(:create_campaign)
         format.js   # create.js.rjs
         format.html { redirect_to(@campaign) }
         format.xml  { render :xml => @campaign, :status => :created, :location => @campaign }
@@ -122,6 +120,14 @@ class CampaignsController < ApplicationController
     render :update do |page|
       page[:campaigns].replace_html render(:partial => "campaign", :collection => @campaigns)
     end
+  end
+
+  private
+  #----------------------------------------------------------------------------
+  def make_new_campaign
+    @campaign = Campaign.new
+    @users = User.all_except(@current_user)
+    find_related_asset_for(@campaign)
   end
 
   #----------------------------------------------------------------------------
