@@ -12,7 +12,7 @@ class OpportunitiesController < ApplicationController
     else
       @opportunities = Opportunity.my(@current_user).only(session[:filter_by_opportunity_stage].split(","))
     end
-    make_new_opportunity if session["create_opportunity"]
+    make_new_opportunity if visible?(:create_opportunity)
 
     respond_to do |format|
       format.html # index.html.erb
@@ -27,8 +27,6 @@ class OpportunitiesController < ApplicationController
     @opportunity = Opportunity.find(params[:id])
     @comment = Comment.new
 
-    make_new_campaign if session["create_opportunity_campaign"]
-
     respond_to do |format|
       format.html # show.html.erb
       format.xml  { render :xml => @opportunity }
@@ -39,9 +37,8 @@ class OpportunitiesController < ApplicationController
   # GET /opportunities/new.xml                                             AJAX
   #----------------------------------------------------------------------------
   def new
-    @context = (params[:context].blank? ? "create_opportunity" : params[:context])
-    session[@context] = (params[:visible] == "true" ? nil : true)
-    make_new_opportunity(@context)
+    preserve_visibility(:create_opportunity)
+    make_new_opportunity
 
     respond_to do |format|
       format.js   # new.js.rjs
@@ -61,15 +58,15 @@ class OpportunitiesController < ApplicationController
   #----------------------------------------------------------------------------
   def create
     @opportunity = Opportunity.new(params[:opportunity])
-    @users = User.all_except(@current_user)
-    @account = Account.new(params[:account])
-    @accounts = Account.my(@current_user).all(:order => "name")
-    @stage = Setting.opportunity_stage.inject({}) { |hash, item| hash[item.last] = item.first; hash }
-    @context = (params[:context].blank? ? "create_opportunity" : params[:context])
+    @users       = User.all_except(@current_user)
+    @account     = Account.new(params[:account])
+    @accounts    = Account.my(@current_user).all(:order => "name")
+    @stage       = Setting.opportunity_stage.inject({}) { |hash, item| hash[item.last] = item.first; hash }
+    preserve_visibility(:create_opportunity)
 
     respond_to do |format|
       if @opportunity.save_with_account_and_permissions(params)
-        session[@context] = nil
+        drop_visibility(:create_opportunity)
         get_data_for_sidebar if request.referer =~ /opportunities$/
         format.js   # create.js.rjs
         format.html { redirect_to(@opportunity) }
@@ -128,6 +125,15 @@ class OpportunitiesController < ApplicationController
   end
 
   private
+  #--------------------------------------------------------------------------
+  def make_new_opportunity
+    @opportunity = Opportunity.new(:user => @current_user, :access => "Private", :stage => "prospecting")
+    @users       = User.all_except(@current_user)
+    @account     = Account.new(:user => @current_user, :access => "Private")
+    @accounts    = Account.my(@current_user).all(:order => "name")
+    find_related_asset_for(@opportunity)
+  end
+
   #----------------------------------------------------------------------------
   def get_data_for_sidebar
     @stage = Setting.opportunity_stage.inject({}) { |hash, item| hash[item.last] = item.first; hash }
