@@ -1,3 +1,2 @@
 require "fat_free_crm/callback.rb"
 require "fat_free_crm/plugin.rb"
-require "fat_free_crm/inline_forms.rb"
