@@ -175,6 +175,10 @@
 .bucket
   :margin 0px 0px 10px 0px
 
+.prefix
+  :width 30px
+  :font-size 10px
+
 .comment
   :background #efefef
   :margin 2px 0px 0px 0px
