@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Wed, Feb 26, 2008
+---------------------------------------------------------------------
+- Github commits are up on Twitter at http://twitter.com/fatfreecrm
+
 Wed, Feb 25, 2008
 ---------------------------------------------------------------------
 - Refactored tasks, added ability to create related tasks (Campaigns only so far).
